...
    app:layout_behavior="@string/appbar_scrolling_view_behavior">



    <androidx.core.widget.NestedScrollView

        android:id="@+id/scrollViewParameter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirmData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
...
                android:textSize="@dimen/textsize_large"
                >

            </TextView>

            <EditText
                android:id="@+id/etAge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:hint="@string/age_measure_unit"
                android:inputType="number"
...
                android:textSize="@dimen/textsize_large"
                >

            </TextView>

            <EditText
                android:id="@+id/etCreatininePhosphokinase"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:hint="@string/creatinine_phosphokinase_measure_unit"
                android:inputType="number"
...
                android:textSize="@dimen/textsize_large"
                >

            </TextView>

            <EditText
                android:id="@+id/etEjectionFraction"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:hint="@string/ejection_fraction_measure_unit"
                android:inputType="number"
...
                android:textSize="@dimen/textsize_large"
                >

            </TextView>

            <EditText
                android:id="@+id/etPlatelets"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:hint="@string/platelets_measure_unit"
                android:inputType="numberDecimal"
...
                android:textSize="@dimen/textsize_large"
                >

            </TextView>

            <EditText
                android:id="@+id/etSerumCreatinine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:hint="@string/serum_creatinine_measure_unit"
                android:inputType="numberDecimal"
...
                android:textSize="@dimen/textsize_large"
                >

            </TextView>

            <EditText
                android:id="@+id/etSerumSodium"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:hint="@string/serum_sodium_measure_unit"
                android:inputType="number"
...
