...
    <string name="positive_death_result">Your next heart attack shouldn\'t be lethal.</string>
    <string name="negative_death_result">Your next heart attack could be lethal.\nPlease be careful.</string>

    <string name="snackbar_try_again">Try again</string>
    <string name="snackbar_error_message">Something went wrong, check your connection and try again.</string>

    <string name="toast_error_message">"Fill all parameters!"</string>


    <string name="age_measure_unit">years</string>
    <string name="creatinine_phosphokinase_measure_unit">mcg/L</string>
    <string name="ejection_fraction_measure_unit">percentage</string>
    <string name="platelets_measure_unit">kiloplatelets/mL</string>
...
